--- a/common.css
+++ b/common.css
@@ -10,8 +10,8 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .loader-container {
@@ -85,4 +85,57 @@ body {
   outline: none;
   color: black;
   margin-bottom: 20px;
+}
+
+/* Basic styling for the pop-up */
+.popup {
+  display: none;
+  flex-direction: column;
+  width: fit-content;
+  position:absolute;
+  background-color: white;
+  border: 2px solid lightgray;
+  border-radius: 5px;  
+  padding: 10px;
+  margin-top: 25px;
+  margin-right: 20px;
+  /* display: none; */
+  z-index: 1000;
+  gap: 10px;
+}
+
+.profile-img {
+  height: 40px; 
+  width: 40px;
+  border-radius: 50%;
+}
+
+#profileEmail {
+  font-size: 8px;
+  margin-bottom: 5px;
+}
+
+#editProfileBtn {
+  border-radius: 5px;
+  background-color: #d1cdd3;
+  font-weight: bold;
+  border: none;
+  font-size: 12px;
+  padding: 3px 8px 3px 8px;
+}
+
+#editProfileBtn,
+#profileSavedJob,
+#profileAboutUs,
+#profileLogout,
+#profileHelpCenter {
+  cursor: pointer;
+}
+
+.menu-item {
+  font-size: 12px;
+}
+
+#profileLogout {
+  color: red;
 }
