--- a/common.css
+++ b/common.css
@@ -14,6 +14,15 @@ body {
   flex-direction: column;
 }
 
+.logo {
+  border-radius: 50%;
+  background-color: #8b819a;
+  font:xx-small;
+  color: white;
+  padding: 5px;
+  margin: 3px;
+}
+
 .loader-container {
   display: none;
   justify-content: center;
